--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -47,6 +47,13 @@ jobs:
           GITHUB_AUTHORIZATION_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           yarn download ${{ inputs.repo }} --ref ${{ inputs.branch }}
+          if [ ${{ inputs.repo }} = "pingcap/docs" ] && [ ${{ inputs.branch }} = "release-6.1" ]
+          then
+          yarn download:tidb-cloud:en --ref ${{ inputs.branch }}
+          elif [ ${{ inputs.repo }} = "pingcap/docs" ] && [ ${{ inputs.branch }} = "i18n-ja-release-6.1" ]
+          then
+          yarn download:tidb-cloud:ja --ref ${{ inputs.branch }}
+          fi
 
       - name: Update all folder
         if: ${{ inputs.full }}
@@ -55,21 +62,12 @@ jobs:
         run: |
           sudo rm -fr ./markdown-pages/*
           yarn download:tidb:en:all
+          yarn download:tidb-cloud:en
           yarn download:tidb:zh:all
           yarn download:tidb:ja:all
+          yarn download:tidb-cloud:ja
           yarn download:dm:all
           yarn download:tidb-operator:all
-
-      - name: Filter cloud doc from target branch
-        run: |
-          yarn filter:tidb-cloud:en --ref release-6.1
-          yarn filter:tidb-cloud:ja --ref release-6.1
-
-      - name: Remove unexpected folder
-        run: |
-          sudo rm -fr ./markdown-pages/en/tidb/master/tidb-cloud
-          sudo rm -fr ./markdown-pages/en/tidb/release-5.4/tidb-cloud
-          sudo rm -fr ./markdown-pages/ja/tidb/release-5.4/tidb-cloud
 
       - name: Git commit and push
         run: |
