--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -2,8 +2,7 @@ name: Update preview branch
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
     paths-ignore:
       - ".github/**"
   workflow_dispatch:
