--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -90,3 +90,13 @@ jobs:
             git commit -m "update MD by dispatch event ${{ inputs.repo }} ${{ inputs.branch }}"
           fi
           git push
+
+      # - name: Trigger website-docs
+      #   run: |
+      #     export CURRENT_SHA=$(git rev-parse HEAD)
+      #     curl \
+      #     -X POST \
+      #     -H "Accept: application/vnd.github+json" \
+      #     -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+      #     https://api.github.com/repos/pingcap/website-docs/actions/workflows/production.yml/dispatches \
+      #     -d '{"ref":"master","inputs":{"hash": "$CURRENT_SHA", "fallback": "false"}}'
