--- a/.github/workflows/surge-preview.yml
+++ b/.github/workflows/surge-preview.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Clone Docs Website Code
         uses: actions/checkout@v3
         with:
+          repository: "pingcap/website-docs"
           ref: "master"
           path: "website"
       - name: Clone This Repo
