--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -26,6 +26,7 @@ jobs:
   build:
     concurrency: update-${{ inputs.repo }}-${{ inputs.branch }}
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
     steps:
       - uses: actions/checkout@v3
